--- a/crud/public/stylesheets/style.css
+++ b/crud/public/stylesheets/style.css
@@ -6,3 +6,19 @@ body {
 a {
   color: #00B7FF;
 }
+
+div.text {
+	border: 1px solid;
+	margin: 5px 5px 5px 0;
+	padding: 10px;
+}
+
+ul.tweetList {
+	list-style: none;
+}
+
+textarea {
+	margin: 2px;
+	width: 100%;
+	height: 100px;
+}
